# bit-sidekick

./: .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bit_sidekick/: __init__.py  agent.py  cli.py  config.py
bit_sidekick/modules/: __init__.py  analyzer.py  auditor.py  configurator.py
examples/starter-packs/: README.md
examples/starter-packs/data-platform/: infrastructure.yml
examples/starter-packs/microservices/: infrastructure.yml
examples/starter-packs/web-app/: infrastructure.yml
tests/: __init__.py  test_agent.py  test_analyzer.py  test_config.py
